@@ -1,3 +1,11 @@
+2004-03-22  Dave Brolley  <brolley@redhat.com>
+
+	* utils.scm (copyright-fsf): Update copyright years.
+	(copyright-red-hat): Ditto.
+	* sid.scm (-op-gen-set-trace): Generate trace code before semantic
+	code.
+	(-op-gen-set-trace-parallel): Ditto.
+
 2004-02-10  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.dot.com>
 
 	* cpu/m32r.opc (my_print_insn): Fixed incorrect output when
